@@ -5,8 +5,8 @@ noinst_LIBRARIES = libr9_client.a
 dtddir = @datadir@/$(PACKAGE)/dtd
 dist_dtd_DATA = geometry.dtd texture.dtd
 
-libr9_client_a_SOURCES = geometry.cc object.cc texture.cc comm.cc \
+libr9_client_a_SOURCES = geometry.cc texture.cc comm.cc client_core.cc \
 	configdata.cc cache.h geometry.h object.h texture.h comm.h \
-	configdata.h l10n.h
+	client_core.h configdata.h l10n.h
 libr9_client_a_CXXFLAGS = $(CLIENT_CXXFLAGS) $(CLIENT_INCLUDES) \
-	-DDTD_PATH=\"$(dtddir)/\"
+	-DDTD_PATH=\"$(dtddir)/\" -DSTORE_PREFIX=\"@datadir@/$(PACKAGE)/\"
